js/js.translator/testData/incremental/invalidation/moveAndModifyInlineFunction/main/m.kt
fun box(stepId: Int): String {
    konst x = test()
    if (x != stepId) {
        return "Fail: $x != $stepId"
    }
    return "OK"
}
